--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </a>      
     <!--навигация на другие страницы-->
       <ul class="site-nav list">
-          <li class="item"><a href="" class="link current">Студія</a></li>
-          <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li class="item"><a href="" class="link">Контакти</a></li>
+          <li class="site-nav__item"><a href="" class="site-nav__link site-nav__link_current">Студія</a></li>
+          <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфоліо</a></li>
+          <li class="site-nav__item"><a href="" class="site-nav__link">Контакти</a></li>
       </ul>
       </nav>
     <!--Контакті-->
