дает названия по БЕМ

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,12 +30,12 @@
         </nav>
         <!--Контакті-->
         <ul class="contacts list">
-          <li class="item"><a href="mailto:info@devstudio.com" class="link social"> 
-          <svg class="icon-mail" width="16px" height="12px">
+          <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link-social contacts__link-social_theme_color"> 
+          <svg class="contacts__icon-mail" width="16px" height="12px">
             <use href="./images/icons (1).svg#icon-envelope-1"></use>
           </svg> info@devstudio.com</a></li>
-          <li class="item"><a href="tel:+380961111111" class="link social">
-            <svg class="icon-tel" width="10px" height="16px">
+          <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link-social contacts__link-social_theme_color">
+            <svg class="contacts__icon-tel" width="10px" height="16px">
             <use href="./images/icons (1).svg#icon-smartphone-1"></use>
           </svg>
             +38 096 111 11 11</a></li>
@@ -209,29 +209,29 @@
       <div class="social-footer">
       <h3 class="social title">Приєднуйтесь</h3>
       <ul class="social-list list">
-                <li class="social">
-                  <a class="social-link" href="">
-                    <svg class="social-icon" width="20px" height="20px">
+                <li class="social-list__social">
+                  <a class="social-list__link" href="">
+                    <svg class="social-list__icon" width="20px" height="20px">
                       <use href="./images/icons (1).svg#icon-instagram-2-2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social">
-                  <a class="social-link" href="">
-                    <svg class="social-icon" width="20px" height="20px">
+                <li class="social-list__social">
+                  <a class="social-list__link" href="">
+                    <svg class="social-list__icon" width="20px" height="20px">
                       <use href="./images/icons (1).svg#icon-twitter-1-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social">
-                  <a class="social-link" href="">
+                <li class="social-list__social">
+                  <a class="social-list__link" href="">
                     <svg class="social-icon" width="20px" height="20px">
                       <use href="./images/icons (1).svg#icon-facebook-1-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social">
-                  <a class="social-link" href="">
+                <li class="social-list__social">
+                  <a class="social-list__link" href="">
                     <svg class="social-icon" width="20px" height="20px">
                       <use href="./images/icons (1).svg#icon-linkedin-1-1"></use>
                     </svg>
